--- a/app/views/favorite_photos/index.html.erb
+++ b/app/views/favorite_photos/index.html.erb
@@ -1,9 +1,5 @@
 <div class="banner">
-  <div class="dark-stroke">
-    <%= link_to root_path do %>
-      <i class="fas fa-home"></i>
-    <% end %>
-  </div>
+  <div class="dark-stroke"></div>
   <div class="light-stroke">
     <div class="large-title">
       Your favorites
