--- a/app/views/albums/_heart.html.erb
+++ b/app/views/albums/_heart.html.erb
@@ -1,4 +1,4 @@
-<% if photo.favorite? %>
+<% if photo.favorite_photos && photo.favorite_photos.map(&:user_id).include?(current_user.id) %>
   <%= link_to favorite_photo_path(photo), method: :delete, remote: true do %>
     <i class="fas fa-heart heart-red"></i>
   <% end %>
